examples/test/testpolicy15203.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15203
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key13: value12
      key39: value28
      key15: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value7
          key16: value40
          key30: value19
      podSelector:
        matchLabels:
          key34: value19
          key42: value29
          key21: value30
